# light-rehnda

./: Cargo.toml  README.md
config/: rehnda_settings.ron
renders/: cornell_box_4096s_600p.ppm
src/: main.rs
src/acceleration/: aabb.rs  bvh.rs
src/aggregator/: aggregator.rs  mod.rs
src/core/: color.rs  mod.rs  ray.rs  rehnda_math.rs
src/hittable/: box_hittable.rs  constant_medium.rs  hittable.rs  mod.rs  rotate_y.rs  sphere.rs  translate.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
src/image/: image_buffer.rs  image_writer.rs  mod.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/scene/: camera.rs  mod.rs  scene.rs  scene_builder.rs  settings.rs
src/texture/: checker.rs  image.rs  mod.rs  noise.rs  solid.rs  texture.rs
src/util/: perlin.rs
