[package]
name = "light-rehnda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"]}
glam = "0.22.0"
log = "0.4"
simplelog = "0.12"
rand = "0.8"
indicatif = "0.17"
ron = "0.8"
serde = { version = "1", features = ["derive"]}
lazy_static = "1.4"
image = "0.24"